# android_root_suite

./: .pre-commit-config.yaml  Minimal requirements.txt  README.md  check_deps.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_env.bat  setup_env.sh
config/: __init__.py  constants.py  settings.py
core/: __init__.py  adb_manager.py  backup_manager.py  device_manager.py  file_manager.py
gui/: __init__.py  app.py  styles.py  utils.py
gui/widgets/: __init__.py  base_widget.py
gui/widgets/dialogs/: __init__.py  adb_setup_dialog.py  backup_dialog.py  device_info_dialog.py  patching_dialog.py
gui/widgets/tabs/: __init__.py  advanced_tools_tab.py  backup_tools_tab.py  base_tab.py  brand_tools_tab.py  main_tools_tab.py  root_tools_tab.py
tools/: __init__.py  mediatek_tools.py  qualcomm_tools.py  samsung_tools.py  xiaomi_tools.py
utils/: __init__.py  file_utils.py  logging_utils.py  thread_utils.py
